// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge.tsx icon 1`] = `
"<div class=\\"bk-badge-main\\">
  <div><template slot=\\"icon\\"></template><button class=\\"bk-button-default  bk-button\\">
      <!----><span class=\\"bk-button-text\\">Badge</span>
    </button></div><span class=\\"bk-badge pinned bk-primary top-right\\"><span><!----></span></span>
</div>"
`;

exports[`Badge.tsx overflowCount 1`] = `
"<div class=\\"bk-badge-main\\">
  <div></div><span class=\\"bk-badge pinned bk-primary top-right\\"><span>99+</span></span>
</div>"
`;

exports[`Badge.tsx slot 1`] = `
"<div class=\\"bk-badge-main\\">
  <div><button class=\\"bk-button-default  bk-button\\">
      <!----><span class=\\"bk-button-text\\">Badge</span>
    </button></div><span class=\\"bk-badge pinned bk-primary top-right\\"><span><!----></span></span>
</div>"
`;
